force-app/main/default/objects/CampaignColumns__c/CampaignColumns__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CampaignColumns</label>
</CustomObject>