force-app/main/default/objects/CampaignColumns__c/fields/ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ADDRESS</label>
    <type>Checkbox</type>
</CustomField>