force-app/main/default/objects/CampaignColumns__c/fields/COMPANY__c.field-meta.xml
<CustomField>
    <fullName>COMPANY__c</fullName>
    <defaultValue>true</defaultValue>
    <label>COMPANY</label>
    <type>Checkbox</type>
</CustomField>