force-app/main/default/objects/CampaignColumns__c/fields/EMAIL__c.field-meta.xml
<CustomField>
    <fullName>EMAIL__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EMAIL</label>
    <type>Checkbox</type>
</CustomField>