force-app/main/default/objects/CampaignColumns__c/fields/OWNER__c.field-meta.xml
<CustomField>
    <fullName>OWNER__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OWNER</label>
    <type>Checkbox</type>
</CustomField>