force-app/main/default/objects/CampaignColumns__c/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PHONE</label>
    <type>Checkbox</type>
</CustomField>