force-app/main/default/objects/CampaignColumns__c/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TITLE</label>
    <type>Checkbox</type>
</CustomField>